# delivery-oss

./: LICENSE  README.md
apps/delivery-api/: .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  mypy.ini  pyproject.toml
apps/delivery-api/delivery_api/: huey.py  settings.py  urls.py  wsgi.py
apps/delivery-api/delivery_api/deliveries/: apps.py  background.py  filters.py  models.py  serializers.py  urls.py  views.py  workflows.py
apps/delivery-api/delivery_api/deliveries/fixtures/: google-maps1.json  google-maps2.json  google-maps3.json  package4.json
apps/delivery-api/delivery_api/deliveries/migrations/: 0001_initial.py  0002_rename_driver_location_assignment_confirmation_location.py  0003_auto_20220603_1643.py  0004_stop_completed_at.py  0005_populate_stop_completed_at.py  0006_assignment_type.py
apps/delivery-api/delivery_api/deliveries/tests/: __init__.py  test_background.py  test_views.py  test_workflows.py
apps/delivery-api/delivery_api/deliveries/utils/: constants.py  fields.py  functions.py  google.py  order_api.py
apps/delivery-api/delivery_api/drivers/: apps.py  filters.py  models.py  serializers.py  urls.py  views.py
apps/delivery-api/delivery_api/drivers/fixtures/: package1.json  package2.json  package3.json
apps/delivery-api/delivery_api/drivers/migrations/: 0001_initial.py  0002_driver_status.py  0003_driver_second_phone_number.py  0004_auto_20220601_1734.py  (+2 more)
apps/delivery-api/delivery_api/mini_huey/: apps.py
apps/delivery-api/delivery_api/staff/: apps.py  models.py  serializers.py  urls.py  views.py
apps/staff-app/: .env  (+5 more)
(+538 files in other folders)
